--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: go
 go:
   - 1.13.x
   - 1.14.x
+  - tip
 env:
   - GO111MODULE=on
 install:
@@ -9,8 +10,8 @@ install:
 script:
   - golint -set_exit_status ./...
   - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
-# after_success:
-#   - bash <(curl -s https://codecov.io/bash)
-# matrix:
-#   allow_failures:
-#     - go: tip
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+matrix:
+  allow_failures:
+    - go: tip
